@@ -36,3 +36,10 @@ See <<./amqp.adoc#amqp,AMQP Support>> for more information.
 
 The `ReactiveRedisStreamMessageProducer` has now setters for all the `StreamReceiver.StreamReceiverOptionsBuilder` options, including an `onErrorResume` function.
 See <<./redis.adoc#redis,Redis Support>> for more information.
+
+[[x5.5-http]]
+==== HTTP Changes
+
+The `HttpRequestExecutingMessageHandler` doesn't fallback to the `application/x-java-serialized-object` content type any more and lets the `RestTemplate` make the final decision for the request body conversion based on the `HttpMessageConverter` provided.
+
+See <<./http.adoc#http,HTTP Support>> for more information.
